added constants in CandidateValidator, StreamPractice fixed line 56,75,88,109